--- a/package.json
+++ b/package.json
@@ -3,20 +3,29 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-scripts": "5.0.1",
+    "@babel/preset-react": "^7.27.1",
+    "@firebase/analytics": "^0.10.18",
+    "@firebase/auth": "^1.11.0",
+    "@firebase/firestore": "^4.9.0",
+    "@types/uuid": "^10.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.14.2",
+    "react-scripts": "^5.0.1",
+    "uuid": "^11.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --env=jest-environment-jsdom --transformIgnorePatterns \"node_modules/(?!(@firebase|firebase)/)\"",
+    "test:ci": "CI=true DISABLE_ESLINT_PLUGIN=true FIREBASE_STORAGE_EMULATOR=1 npm test"
+  },
+  "jest": {
+    "testEnvironment": "jsdom",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(@firebase|firebase)/)"
+    ]
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +44,14 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "jest-environment-jsdom": "^30.0.5",
+    "node-fetch": "^2.6.7",
+    "web-streams-polyfill": "^3.2.1"
   }
 }
